themes/brand-cloud-castles/assets/scss/_services-list.scss
.services-section{
    // background: url(/img/services-bg.png);
    background-size: cover;

    &__top{
        display: flex;
        flex-direction: column;
        align-items: center;
        padding: 3.5rem 1.5rem 2rem;
        width: 100%;

        &-title{
            color: var(--color-blue400);
            letter-spacing: 4px;
            font-family: 'Nunito', sans-serif;
            font-size: 0.641rem;
            font-weight: 700;
            text-transform: uppercase;
            padding: 0;
            margin: 0;
        }

        &-heading{
            padding: 0;
            margin: 0;
            margin-bottom: 15px;
            color: var(--color-black);
            font-size: 1.5rem;
            line-height: 2rem;
            padding: 0;
            margin: 0;
        }
    }

}

.services{
    
    &-list{
        display: flex;
        padding: 0 24px;
        list-style: none;
        flex-wrap: wrap;
        margin-top: 0;
    
        &__el{
            max-width: 360px;
            padding: 32px;
            background: #FFFFFF;
            border: 1px solid #E2E0E0;
            border-radius: 8px;
            margin-bottom: 1.5rem;
            display: flex;
            flex-wrap: wrap;
            box-sizing: border-box;

            &-heading{
                margin: 0;
                padding: 0;
                color: var(--color-blue400);
                font-size: 1.5rem;
                font-weight: 500;
                line-height: 2rem;
                margin-bottom: 20px;
            }
        }
    }

    &-sublist{
        list-style: none;
        padding: 0;

        &__el{
            position: relative;
            font-family: 'Nunito', sans-serif;
            font-weight: 400;
            font-size: 14px;
            line-height: 20px;
            color: #566066;
            margin-bottom: 25px;

            &::after{
                content: "";
                position: absolute;
                bottom: -12px;
                left: 0;
                width: 100%;
                height: 1px;
                border-bottom: 1px dashed #E2E0E0;
            }
        }
    }

    &-button{

        &__wrapper{
            border: 1px solid #37A7D8;
            border-radius: 4px;
            display: inline-block;
            padding: 12px 32px;
            display: block;
            align-self: end;
            width: 100%;
            text-align: center;
        }

        &__link{
            font-size: 1rem;
            line-height: 1.5rem;
            text-decoration: none;
            color: var(--color-black);
        }
    }
}

@media screen and (min-width: 768px){
    .services{
        &-section{
            &__top{
                padding-bottom: 3.5rem;

                &-title{
                    font-size: 0.75rem;
                    letter-spacing: 4px;
                    line-height: 1.125rem;
                }

                &-heading{
                    font-size: 3rem;
                    line-height: 4rem;
                }
            }
        }
        &-list{
            padding: 0;
            justify-content: space-between;
            margin-bottom: 2.5rem;
        
            &__el{
                max-width: 360px;
                margin-bottom: 2.5rem;

                &--empty{
                    min-width: 360px;
                }
                // &:nth-child(2, 4, 8){
                //     margin-left: 1.5rem;
                // }
                
                &-heading{
                    max-width: 260px;
                }

                &:nth-child(1){
                    .services-list__el-heading{
                        max-width: 220px;
                    }
                }
            }
        }
    }
}

@media screen and (min-width: 768px) and (max-width: 1160px){
    .services{
        &-list{
            justify-content: space-evenly;
        }
    }
}

